--- a/src/main/resources/web/index.zul
+++ b/src/main/resources/web/index.zul
@@ -1,4 +1,5 @@
 <zk>
+    <?page title="play"?>
     <window title="Hello ZK - playground!" border="normal">
         You are using ZK version <label value="${session.webApp.version}"/><separator/>
         <button label="Say Hi!" onClick='alert("abc")'></button>
@@ -13,5 +14,18 @@
         <datebox value="${now}"></datebox>
 
 
+    </window>
+    <window title="Hello ZK - playground!" border="normal">
+        You are using ZK version <label value="${session.webApp.version}"/><separator/>
+        <button label="Say Hi!" onClick='alert("abc")'></button>
+        <button label="Notification" onClick='Clients.showNotification("Clicked");'></button>
+        <button label="Say Hi!" onClick='Messagebox.show("Clicked");'></button><separator></separator>
+
+        <textbox id="input" onChange="result.setValue(input.getValue())"></textbox><space/><button label="Copy" onClick="result.setValue(input.getValue())"></button> <separator></separator>
+        <label id="result"></label><separator></separator>
+
+        <label value="${self.parent.title}"></label>
+        <zscript> Date now = new Date();</zscript>
+        <datebox value="${now}"></datebox>
     </window>
 </zk>
